fix: align border radius

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -31,7 +31,7 @@ table {
       content: '/'
       align-items: center;
       background: linear-gradient(-225deg, #d5dbe4, #f8f8f8);
-      border-radius: 3px;
+      border-radius: 4px;
       box-shadow: inset 0 -2px 0 0 #cdcde6, inset 0 0 1px 1px #fff, 0 1px 2px 1px rgba(30,35,90,0.4);
       color: #969faf;
       display: flex;
