--- a/packages/styles/forms/_inputs.scss
+++ b/packages/styles/forms/_inputs.scss
@@ -42,7 +42,7 @@
     color: var(--KInputBorder, var(--grey-600));
     background-color: var(--KInputBackground, var(--white));
     display: inline-block;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     transition: color 0.1s ease;
   }
 }
@@ -58,7 +58,7 @@
     font-weight: 400;
     line-height: 24px;
     border: none;
-    border-radius: 3px;
+    border-radius: 4px;
     background-color: var(--KInputBackground, var(--white, color(white)));
     box-shadow: inset 0 0 0 1px var(--KInputBorder, var(--grey-300)) !important;
     box-sizing: border-box;
@@ -120,29 +120,29 @@
     }
   }
 }
-  /**
+/**
    * But KSelect still wants disabled/invalid styles applied
    * Note: this style-block MUST come AFTER the read-only block. Disabled state
    *  takes precedence over read-only state.
    */
-   
-  .k-input,
-  .form-control {
-    &:not([type="checkbox"]),
-    &:not([type="radio"]) {
-      &:disabled {
-        cursor: not-allowed;
-        font-style: italic;
-        background-color: var(--KInputDisabledBackground, var(--grey-100, color(grey-100)));
-        box-shadow: inset 0 0 0 1px var(--KInputBorder, var(--grey-300)) !important;
-      }
 
-      &:invalid,
-      &:-moz-submit-invalid,
-      &:-moz-ui-invalid {
-        box-shadow: none;
-      }
+.k-input,
+.form-control {
+  &:not([type="checkbox"]),
+  &:not([type="radio"]) {
+    &:disabled {
+      cursor: not-allowed;
+      font-style: italic;
+      background-color: var(--KInputDisabledBackground, var(--grey-100, color(grey-100)));
+      box-shadow: inset 0 0 0 1px var(--KInputBorder, var(--grey-300)) !important;
     }
+
+    &:invalid,
+    &:-moz-submit-invalid,
+    &:-moz-ui-invalid {
+      box-shadow: none;
+    }
+  }
 
   &[type="search"] {
     padding-left: 36px;
